@@ -1,6 +1,7 @@
 Changes since 1.3e:
  o Make the entire evdns.h header enclosed in "extern C" as appropriate.
  o Remove redundant socklen_t definition from evdns.c; fix mingw build.
+ o Fix evport implementation: port_disassociate called on unassociated events resulting in bogus errors; more efficient memory management; from Trond Norbye and Prakash Sangappa
 
 Changes since 1.3d:
  o demote most http warnings to debug messages
